# efm32pg-pacs

./: CHANGELOG.md  README.md
pacs/efm32pg/: Cargo.toml  README.md  build.rs
pacs/efm32pg/src/: lib.rs
pacs/efm32pg/src/efm32pg12b500/: mod.rs
pacs/efm32pg/src/efm32pg1b100/: mod.rs
pacs/efm32pg/src/efm32pg1b200/: mod.rs
pacs/efm32pg23/: Cargo.toml  README.md  build.rs
pacs/efm32pg23/efm32pg23b200/: Cargo.toml
pacs/efm32pg23/efm32pg23b200/src/: lib.rs
pacs/efm32pg23/efm32pg23b210/: Cargo.toml
pacs/efm32pg23/efm32pg23b210/src/: lib.rs
pacs/efm32pg23/efm32pg23b310/: Cargo.toml
pacs/efm32pg23/efm32pg23b310/src/: lib.rs
pacs/efm32pg23/src/: lib.rs
pacs/efm32pg23/src/efm32pg23b200/: emu_ns.rs  mod.rs
pacs/efm32pg23/src/efm32pg23b200/amuxcp0_ns/: trim.rs
pacs/efm32pg23/src/efm32pg23b200/amuxcp0_s/: test.rs
pacs/efm32pg23/src/efm32pg23b200/emu_s/: cmd.rs
pacs/efm32pg23/src/efm32pg23b200/iadc0_ns/: cfg1.rs  scan0.rs  scan14.rs  scan3.rs  single.rs
pacs/efm32pg23/src/efm32pg23b200/iadc0_s/: scan13.rs  scan4.rs  scan8.rs
pacs/efm32pg23/src/efm32pg23b200/lesense_ns/: ch10_interact.rs  ch11_evalcfg.rs  ch11_interact.rs  ch12_evalthres.rs  ch14_evalthres.rs  ch15_evalcfg.rs  ch2_interact.rs  ch2_timing.rs  ch3_timing.rs  ch4_evalthres.rs  ch6_evalcfg.rs  ch6_interact.rs  ch8_interact.rs  ch9_interact.rs  evalctrl.rs  st24_arc.rs  st2_arc.rs  st38_arc.rs  st41_arc.rs  st50_arc.rs  st51_arc.rs  st52_arc.rs  st53_arc.rs  st56_arc.rs  st58_arc.rs  st62_arc.rs  st6_arc.rs  st7_arc.rs
pacs/efm32pg23/src/efm32pg23b200/lesense_s/: ch11_evalthres.rs  ch12_interact.rs  ch13_interact.rs  ch14_interact.rs  ch15_evalthres.rs  ch1_interact.rs  ch3_interact.rs  ch4_evalcfg.rs  ch7_evalthres.rs  ch7_interact.rs  ch9_evalcfg.rs  decstate.rs  idleconf.rs  ien.rs  st13_arc.rs  st14_arc.rs  st19_arc.rs  st27_arc.rs  st42_arc.rs  st4_arc.rs  st55_arc.rs  st59_arc.rs  st63_arc.rs
pacs/efm32pg23/src/efm32pg23b210/: amuxcp0_ns.rs  mod.rs
pacs/efm32pg23/src/efm32pg23b210/iadc0_ns/: scan10.rs  scan12.rs  scan15.rs  (+3 more)
pacs/efm32pg23/src/efm32pg23b310/: lesense_ns.rs  mod.rs
(+492 files in other folders)
