[package]
name = "efm32pg23-pac"
description = "Peripheral access API for EFM32PG23 MCU (generated using svd2rust)"
homepage = "https://github.com/efm32-rs/efm32pg-pacs"
version = "0.1.2"
authors = [ "Vladimir Petrigo <vladimir.petrigo@gmail.com>",]
license = "BSD-3-Clause"
keywords = [ "no-std", "arm", "cortex-m", "efm32",]
categories = [ "embedded", "hardware-support", "no-std",]
repository = "https://github.com/efm32-rs/efm32pg-pacs"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "~0.7"
vcell = "~0.1"

[features]
default = [ "rt",]
rt = [ "cortex-m-rt/device",]
efm32pg23b200 = []
efm32pg23b210 = []
efm32pg23b310 = []

[dependencies.portable-atomic]
version = "~1"
default-features = false

[dependencies.critical-section]
version = "~1"
optional = true

[dependencies.cortex-m-rt]
version = "~0.7"
optional = true

[package.metadata.docs.rs]
features = [ "rt", "efm32pg23b200", "efm32pg23b310",]
default-target = "thumbv8m.main-none-eabihf"
targets = []
